Bug 1096014 - Regression: Unable to complete downloads in Firefox for Android. r=mfinkle, a=lsblakk